# llm_summarize

./: .flake8  .gitignore  BhyKEbu-  Dockerfile  README.md  db.py  db_connection.py  docker-compose.yaml  fly.toml  get_text.py  llm_summarise.py  llm_summarize.py  llm_text_summarizer.py  local_dev.env  ollama_llm_text_summarizer.py  pyproject.toml  rss.xml  rss_summarizer.py  sqlite_connection.py  telegram_bot.py
llm_summarize/: db.py  llm_summarize.py
llm_summarize/kokoro_tts/: kokoro_tts.py
llm_summarize/rss_llm/: llm_text_summarizer.py  rss_summarizer.py
llm_summarize/telegram_ui/: telegram_bot.py
rss_llm/: db.py  llm_text_summarizer.py  rss_summarizer.py  telegram_bot.py
