[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "feedparser>=6.0.11",
    "ollama>=0.4.2",
    "openai>=1.57.4",
    "pydantic>=2.10.3",
    "python-telegram-bot[job-queue,rate-limiter]>=21.9",
    "requests>=2.32.3",
]
